# linuxfetch

./: README.md  linuxfetch.sh
LinuxFetch (Version for compilation. .ebuild file is suitable for Gentoo)/: CMakeLists.txt
LinuxFetch (Version for compilation. .ebuild file is suitable for Gentoo)/app-misc/linuxfetch/: linuxfetch-1.0_beta2.ebuild
linuxfetch1file/: linuxfetch.sh
